Modernize end-to-end flow instantiation for Java 21
Use records, pattern matching, enhanced switches, and sequenced collection operations in the end-to-end flow builder. Simplify FlowIterator state and apply mechanical generic and emptiness cleanup while preserving the existing traversal algorithms.